# tscli_python

./: README.md  cli.py  pyproject.toml
client/: client.py
config/: local_config.py
tsweb_py/: __init__.py  __main__.py  cli.py
tsweb_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tsweb_py/client/: __init__.py  client.py  models.py
tsweb_py/config/: __init__.py  global_config.py  local_config.py
tsweb_py/utils/: __init__.py  terminal.py
