[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsweb_py"
version = "1.0.0"
description = "CLI client for TestSys online judge system (tsweb.ru)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "khbminus && adikonn"}
]
keywords = ["testsys", "tsweb", "online-judge", "cli", "competitive-programming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
tsweb_py = "tsweb_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsweb_py*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
